--- a/themes/dark.css
+++ b/themes/dark.css
@@ -1,12 +1,11 @@
-colors{
---rich-black-fogra-39: #0b090aff;
---eerie-black: #161a1dff;
---blood-red: #660708ff;
---ruby-red: #a4161aff;
---carnelian: #ba181bff;
---imperial-red: #e5383bff;
---silver-chalice: #b1a7a6ff;
---light-gray: #d3d3d3ff;
---cultured: #f5f3f4ff;
---white: #ffffffff;
+/* border{
+    border-color: #525252;
+    border-radius: 5px;
+} */
+
+label{
+    color: #ca3e47;
+    font-weight: bolder;
 }
+
+
