--- a/themes/lusco_fusco.css
+++ b/themes/lusco_fusco.css
@@ -1,23 +1,23 @@
 window{
-  background-color: #ffd5a6;
-  background-image: none;
+  background-color: #92ddfa;
+  background-image: linear-gradient(45deg, #1976c2, #92ddfa);
 }
 
 border{
-  border-color: #fcb36e;
+  border-color: #2b2f63;
 }
 
 scale trough highlight {
-  background-color: #ff6161;
-  border-color: #ff6161;
+  background-color: #003ec5;
+  border-color: #003ec5;
 }
 
 spinbutton {
-  border-color: #ff6161;
+  border-color: #003ec5;
 }
 
 dialog{
-  background-color: #e5c38f;
+  background-color: #92ddfa;
 }
 
 label{
@@ -28,7 +28,7 @@ label{
 
 
 .title1 label{
-  color: #8f0303;
+  color: #012c8a;
   font-weight: bolder;
   font-size: 18px;
 }
